fixed some alignment with float on my historical places pictures

--- a/CSS-Only/static/css/styles.css
+++ b/CSS-Only/static/css/styles.css
@@ -5,6 +5,12 @@ body {
     margin: 0;
     margin-bottom: 10px;
 }
+
+.container {
+    width: 100%;
+    /* margin: 0 auto; */
+}
+
 @media screen and (min-width: 600px) {
     body {
         margin:0 auto;
@@ -150,21 +156,15 @@ h1, h2, h3, h4, h5, h6 {
         text-align: justify;
     }
     .his-info {
-        width: 80%;
+        width: 100%;
         /* display: flex; */
     }
     .temp {
-        width: 200px;
-        height: 200px;
+        width: 170px;
+        height: 170px;
     }
     .cites {
         margin: auto;
-    }
-}
-
-@media (min-width: 0) and (max-width: 500px) {
-    .his-info img {
-        float: none;
     }
 }
 
